# veritas

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  App.test.js  EXAMINER_GUIDE.md  EXECUTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  agents.md  app.js  article-detail.css  article-detail.html  article-detail.js  articleUtils.test.js  biasUtils.test.js  create_article.py  demo_worker.py  index.html  mock-server.js  package-lock.json  package.json  pytest.ini  requirements.txt  simple-server.js  spectrum-graph.css  spectrum-graph.js  start_summarization.sh  styles.css  test_e2e.db  vercel.json  veritas_news.db
backend/: .env.example  README.md  index.py  pyproject.toml  requirements.txt  veritas_news.db
backend/scripts/: refresh_database.py  setup_dev_db.sh
backend/src/veritas_news/: __init__.py  main.py
backend/src/veritas_news/ai/: __init__.py  bias_analysis.py  config.py  prompts.yaml  scoring.py  summarization.py
backend/src/veritas_news/api/: routes_articles.py  routes_bias_ratings.py
backend/src/veritas_news/db/: bias_rating_db.py  init_db.py  sqlalchemy.py
backend/src/veritas_news/db/migrations/: add_bias_dimensions.py  add_secm_columns.py
backend/src/veritas_news/models/: bias_rating.py  sqlalchemy_models.py
backend/src/veritas_news/worker/: config.py  fetchers.py  news_worker.py  pipeline.py  scheduler.py
backend/tests/: conftest.py  test_ai_bias_analysis.py  test_ai_summarization.py  test_app_startup.py  test_articles_api.py  test_bias_ratings.py  test_bias_utils.py  test_e2e_backend.py  test_init_db.py  test_integration_bugs.py  test_link_accuracy.py  test_maintenance_cycle.py  test_maintenance_e2e.py  test_newsapi_integration.py  test_summarization.py  test_url_bug.py  test_validation_bug.py  test_worker_bugs.py  test_worker_comprehensive.py  test_worker_integration.py  test_worker_simple.py
data/: feed.json
docs/: INDEX.md  SUBMISSION_CHECKLIST.md
docs/bugs/: BUG-VERITAS-44.md  BUG-VERITAS-45.md
docs/guides/: EXAMINER.md  QUICK_START.md
docs/implementation/: 01-PLAN.md  03-STATUS.md  04-AI-LAYER-PLAN.md  05-REFACTOR-AI-TO-LIBRARY.md  06-MULTIDIMENSIONAL-BIAS-SCORING.md  VERITAS-73-IMPLEMENTATION-SUMMARY.md
docs/testing/: TESTING.md
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: theme.ts
lib/: metrics.js  sorting.js
services/summarization/: Dockerfile  (+8 more)
src/: main.py
tests/: conftest.py  test_ai_bias_analysis.py  test_ai_summarization.py  test_app_startup.py  test_articles_api.py  test_bias_ratings.py  test_bias_utils.py  test_e2e_backend.py  test_empty_summary_bug.py  test_frontend_integration.js  test_init_db.py  test_integration_bugs.py  test_newsapi_integration.py  test_status_code_bug.py  test_summarization.py  test_url_bug.py  test_validation_bug.py  test_worker_bugs.py  test_worker_comprehensive.py  test_worker_integration.py  test_worker_simple.py
(+36 files in other folders)
